--- a/ai/Style.css
+++ b/ai/Style.css
@@ -134,12 +134,20 @@ button {
   position:relative;
   float:right;
   top: -60px;
-  background: url(Send.svg) no-repeat;
   right: 10px;
   background-size: cover;
   height: 50px;
   width: 50px;
   border:0px;
+}
+
+#send {
+  background: url(Send.svg) no-repeat;
+}
+
+#stop {
+  display: none;
+  background: url(Stop.svg) no-repeat;
 }
 
 /* general styling */
